--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "react": "^16.12.0",
+    "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-owl-carousel": "^2.3.1",
