--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "bootstrap": "^4.4.1",
     "formik": "^2.1.5",
     "jquery": "^3.4.1",
+    "jwt-decode": "^3.0.0",
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-owl-carousel": "^2.3.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
